# APie

./: APie.sln  CMakeLists.txt  CMakeSettings.json  Makefile.am  README.md  apie.spec.in  bootstrap.sh  configure.ac  install_deps.sh  protocol.drawio  未命名绘图.drawio  杂记.md
DBProxy/: DBProxy.vcxproj  DBProxy.vcxproj.filters  Makefile.am  PropertySheet.props  main.cpp  service_init.cpp  service_init.h
DBProxy/logic/: dbproxy_mgr.cpp  dbproxy_mgr.h  table_cache_mgr.h  table_records_cache_mgr.cpp  table_records_cache_mgr.h
GatewayServer/: GatewayServer.vcxproj  GatewayServer.vcxproj.filters  Makefile.am  PropertySheet.props  main.cpp  service_init.cpp
GatewayServer/logic/: gateway_mgr.cpp  gateway_mgr.h  gateway_role.cpp  gateway_role.h  model_user.cpp  model_user.h
LibAPie/: CMakeLists.txt  LibAPie.vcxproj  LibAPie.vcxproj.filters  Makefile.am  apie.h  main.cpp
LibAPie/MysqlDriver/: MySQLConnector.cpp  MySQLConnector.h  ResultSet.h
LibAPie/Net/: WindowsPlatform.h
LibAPie/api/: api.h  api_impl.cc  api_impl.h  forward_handler.h  hook.cc  hook.h  logiccmd_handler.cc  logiccmd_handler.h  pb_handler.cc  pb_handler.h  pubsub.cc  pubsub.h
LibAPie/common/: c_smart_ptr.h  enum_to_int.h  exception_trap.cpp  exception_trap.h  file.cc  file.h  graphics_utility.cpp  graphics_utility.h  message_traits.h  string_utils.cpp  string_utils.h  time.h  time_conversion.h  utility.cc  utility.h
LibAPie/compressor/: compressor.h
LibAPie/crypto/: crypto_utility.cc  crypto_utility.h
LibAPie/decompressor/: decompressor.h
LibAPie/event/: dispatched_thread.cc  dispatched_thread.h  dispatcher.h  dispatcher_impl.cc  dispatcher_impl.h  event_impl_base.cc  file_event.h  file_event_impl.cc  file_event_impl.h  libevent.cc  libevent.h  libevent_scheduler.cc  libevent_scheduler.h  real_time_system.cc  real_time_system.h  signal.h  signal_impl.cc  signal_impl.h  timer.h  timer_impl.cc  timer_impl.h
LibAPie/filesystem/: directory.cpp
LibAPie/http/: Makefile.am  http_parser_settings.h  http_request_decoder.cpp  http_request_decoder.h  http_response.h  http_response_decoder.cpp  http_util.cpp  http_util.h  string_util.cpp
LibAPie/mysql_driver/: dao_factory.cpp  dao_factory.h  mysql_connector.cpp  mysql_connector.h  mysql_field.cpp  mysql_field.h  mysql_orm.cpp  mysql_orm.h  mysql_table.cpp  mysql_table.h  result_set.cpp  result_set.h
LibAPie/network/: Command.cpp  Command.h  Ctx.cpp  Ctx.h  Mailbox.h  Signaler.cpp  address.cc  address.h  client_connection.cpp  client_connection.h  client_proxy.cpp  client_proxy.h  command.cpp  command.h  connection.cpp  connection.h  ctx.cpp  ctx.h  end_point.cpp  end_point.h  i_poll_events.hpp  listener.h  listener_impl.cc  listener_impl.h  logger.cpp  logger.h  mailbox.h  object.cpp  object.hpp  output_stream.cc  output_stream.h  platform_impl.h  server_connection.cpp  server_connection.h  signaler.cpp  windows_platform.h
LibAPie/redis_driver/: redis_client.cpp  redis_client.h
LibAPie/rpc/: init.cpp  init.h
LibAPie/serialization/: ByteBuffer.cpp  ProtocolHead.cpp  ProtocolHead.h  protocol_head.cpp  protocol_head.h
LibAPie/singleton/: const_singleton.h  instance.h  threadsafe_singleton.h
LoginServer/: LoginServer.vcxproj  LoginServer.vcxproj.filters  Makefile.am  PropertySheet.props  service_init.cpp
LoginServer/logic/: login_mgr.cpp  login_mgr.h
RouteProxy/: Makefile.am  PropertySheet.props  RouteProxy.vcxproj  RouteProxy.vcxproj.filters  main.cpp  service_init.cpp
RouteProxy/logic/: route_client.cpp  route_client.h  route_proxy.cpp  route_proxy.h
SceneServer/: Makefile.am  SceneServer.vcxproj  SceneServer.vcxproj.filters  service_init.cpp
SceneServer/logic/: scene_mgr.cpp  scene_mgr.h
ServiceRegistry/: CMakeLists.txt  Makefile.am  PropertySheet.props  ServiceRegistry.vcxproj  ServiceRegistry.vcxproj.filters  main.cpp  service_init.cpp
ServiceRegistry/logic/: service_registry.cpp  service_registry.h
TestServer/: Makefile.am  Map.cpp  PropertySheet.props  TestServer.vcxproj  TestServer.vcxproj.filters  main.cpp  main_1.cpp  main_3.cpp  main_client.cpp  main_findpath.cpp  service_init.cpp  test_client.cpp
TestServer/logic/: mock_role.cpp  mock_role.h  test_case.cpp  test_case.h  test_runner.cpp  test_server.cpp  test_server.h  test_suite.cpp
libapie/: CMakeLists.txt  LibAPie.vcxproj  LibAPie.vcxproj.filters  Makefile.am  apie.h  pb_msg.h
libapie/api/: api.h  api_impl.h  forward_handler.cc  forward_handler.h  logiccmd_handler.cc  logiccmd_handler.h  pubsub.h
libapie/base/: macros.h
libapie/common/: empty_string.h  exception_trap.cpp  macros.h  noncopyable.h  pure.h
libapie/compressor/: lz4_compressor_impl.cc  lz4_compressor_impl.h
libapie/configs/: Makefile.am  configs.h
libapie/crypto/: crypto_utility.cc
libapie/decompressor/: lz4_decompressor_impl.cc
libapie/event/: deferred_deletable.h  dispatched_thread.h  dispatcher.h  dispatcher_impl.cc  libevent.cc  libevent.h  libevent_scheduler.h  nats_proxy.cc  nats_proxy.h  real_time_system.cc  signal_impl.h
libapie/filesystem/: directory.h
libapie/http/: http_parser_impl.cpp  http_parser_impl.h  http_parser_settings.cpp  http_parser_settings.h  http_request.cpp  http_request.h  http_request_decoder.h  http_response_decoder.h  http_util.cpp  string_util.h
libapie/mysql_driver/: dao_factory.h  mysql_field.h  mysql_orm.h  result_set.cpp
libapie/network/: address.cc  address.h  client_proxy.cpp  ctx.cpp  ctx.h  end_point.cpp  end_point.h  i_poll_events.hpp  logger.cpp  logger.h  object.cpp  object.hpp  output_stream.cc  output_stream.h  signaler.h  windows_platform.h
libapie/redis_driver/: redis_client.h
libapie/rpc/: init.cpp  init.h
libapie/serialization/: byte_buffer.cpp  byte_buffer.h
server/db_proxy_server/: CMakeLists.txt  DBProxy.vcxproj  DBProxy.vcxproj.filters  Makefile.am  PropertySheet.props  service_init.cpp
server/gateway_server/: CMakeLists.txt  GatewayServer.vcxproj  GatewayServer.vcxproj.filters  Makefile.am  main.cpp  service_init.cpp
server/login_server/: CMakeLists.txt  LoginServer.vcxproj  LoginServer.vcxproj.filters  Makefile.am  (+1 more)
(+219 files in other folders)
